--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -107,7 +107,7 @@
     \pagebreak
 
 \section*{HTTP exercises}
-    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e., from 128.238.66.100 to 128.238.66.101. Add first host from \texttt{http-server} and another from \texttt{gui}.
+    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e., from 128.238.66.100 to 128.238.66.101. Add first host from \texttt{http-server} and another hsot from \texttt{gui}.
 
 \section{HTTP Server}
     Config your Apache server configuration file\footnote{\texttt{/etc/apache2/apache2.conf}} (see Section 8.2.3 Ref Book).
@@ -181,34 +181,10 @@
     \end{enumerate}
 
 \section*{DHCP exercises}
-    For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected to a single network segment using their default IP addresses, i.e., from 128.238.66.100 to 128.238.66.107.
+    For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected to a single network segment whitout their default IP addresses.
 
     \begin{center}
         %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-        \begin{minipage}{0.48\textwidth}
-            \begin{flushleft}
-                \begin{table}[H]
-                    \caption{The IP addresses of the hosts}
-                    \vspace{5pt}
-                    \centering
-                    \large
-                    \begin{tabular}{ l l l }
-                        \hline \hline
-                        Host & IP Address & Subnet Mask \\
-                        \hline 
-                        h0 (shakti) & 128.238.66.100 & 255.255.255.0 \\
-                        h1 (vayu) & 128.238.66.101 & 255.255.255.0 \\
-                        h2 (agni) & 128.238.66.102 & 255.255.255.0 \\
-                        h3 (apah) & 128.238.66.103 & 255.255.255.0 \\
-                        h4 (yachi) & 128.238.66.104 & 255.255.255.0 \\
-                        h5 (fenchi) & 128.238.66.105 & 255.255.255.0 \\
-                        h6 (kenchi) & 128.238.66.106 & 255.255.255.0 \\
-                        h7 (guchi) & 128.238.66.107 & 255.255.255.0 \\
-                        \hline \hline
-                        \end{tabular}
-                \end{table}
-            \end{flushleft}
-        \end{minipage}
         \begin{minipage}{0.48\textwidth}
             \begin{flushright}
                 \begin{figure}[H]
@@ -294,7 +270,33 @@
     \end{enumerate}
 
 \section*{NTP exercises}
-    Before proceeding to the next exercise, reboot the hosts and set network topology is given in Fig. 1.3.
+    Before proceeding to the next exercise, reboot the hosts and set network topology is given in Fig. 1.3 and set hosts ip address from 128.238.66.100 to 128.238.66.107.
+    \begin{center}
+        \begin{minipage}{0.48\textwidth}
+            \begin{flushleft}
+                \begin{table}[H]
+                    \caption{The IP addresses of the hosts}
+                    \vspace{5pt}
+                    \centering
+                    \large
+                    \begin{tabular}{ l l l }
+                        \hline \hline
+                        Host & IP Address & Subnet Mask \\
+                        \hline 
+                        h0 (shakti) & 128.238.66.100 & 255.255.255.0 \\
+                        h1 (vayu) & 128.238.66.101 & 255.255.255.0 \\
+                        h2 (agni) & 128.238.66.102 & 255.255.255.0 \\
+                        h3 (apah) & 128.238.66.103 & 255.255.255.0 \\
+                        h4 (yachi) & 128.238.66.104 & 255.255.255.0 \\
+                        h5 (fenchi) & 128.238.66.105 & 255.255.255.0 \\
+                        h6 (kenchi) & 128.238.66.106 & 255.255.255.0 \\
+                        h7 (guchi) & 128.238.66.107 & 255.255.255.0 \\
+                        \hline \hline
+                        \end{tabular}
+                \end{table}
+            \end{flushleft}
+        \end{minipage}
+    \end{center}
 
 \section{NTP Local Date}
     Execute \textbf{date} to display the system time of your host. Display the manual page of \textbf{date}, and study its options and usages.
@@ -361,6 +363,7 @@
     \end{enumerate}
 
 \section*{NAT exercises}
+    For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e., shakti and vayu are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{img/fig1.png}
@@ -370,7 +373,7 @@
 
 \section{NAT}
     Connect the hosts and Router 1 as shown in Fig.
-    8.7.\footnote{For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e., shakti and vayu are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.} Then set the IP address and the network mask of your host as shown in the figure.
+    8.7. Then set the IP address and the network mask of your host as shown in the figure.
     In addition, you need to add a default route in your host’s routing table, using the router interface on your subnet as the default router.
     One student should \textbf{telnet} to the router and configure the router as shown in Table 8.5. Note that there is a static translation that maps 10.0.0.7, or \texttt{guchi}, to 128.238.61.104.
     Login to the router, execute \textbf{write term} to display the current router configuration.
@@ -379,14 +382,13 @@
     We use linux instead a router and config it to use as \textbf{NAT} and \textbf{PAT}\footnote{\href{http://www.solutionsatexperts.com/iptables-nat-pat/}{linxu-iptables-NAT-PAT}}
     \subsection*{Report}
     \begin{enumerate}
-        \item How many entries were there in the translation table?
-        Why?
+        \item How many entries were there in the translation table? Why?
     \end{enumerate}
 
 \section{NAT Visibility}
-    Keep the login session to the router running. Execute \textbf{wireshark} on all the hosts. \\
-    Before any host in the private network send any packets out, ping an inside host (e.g., \texttt{fenchi}) from an outside host (e.g., \textbf{vayu}). You may try to ping 10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104. Can you ping these IP addresses? \\
-    Let an inside host send packets to an outside host, e.g., from \texttt{fenchi}, execute ping 128.238.61.100. Can you ping \texttt{fenchi} from an outside host now? Why? Which IP address should be used in the ping command in order to ping \texttt{fenchi}? \\
+    Keep the login session to the router running. Execute \textbf{tcpdump -exn -nn} or \textbf{wireshark} on all the hosts. \\
+    Before any host in the private network send any packets out, \textbf{ping} an inside host (e.g., \texttt{fenchi}) from an outside host (e.g., \texttt{vayu}). You may try to \textbf{ping} \texttt{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}. Can you \textbf{ping} these IP addresses? \\
+    Let an inside host send packets to an outside host, e.g., from \texttt{fenchi}, execute \textbf{ping} 128.238.61.100. Can you \textbf{ping} \texttt{fenchi} from an outside host now? Why? Which IP address should be used in the \textbf{ping} command in order to \textbf{ping} \texttt{fenchi}? \\
     Execute show ip nat translations in the router login window to display the translation table. Save the output for the lab report. \\
     Exchange the data you saved with a student in the other subnet.
     \subsection*{Report}
@@ -399,11 +401,11 @@
     \end{enumerate}
 
 \section{NAT Table}
-    Keep the login session to the router running. Execute \textbf{wireshark} to capture ICMP messages. \\
+    Keep the login session to the router running. Execute \textbf{tcpdump -enx -s 100 ip proto 1} or \textbf{wireshark} to capture ICMP messages. \\
     Execute \textbf{socket -i -u -n1 128.238.61.101 8888} on \texttt{agni} to generate an ICMP port unreachable error. \\
     Print the ICMP error message for the lab report. \\
-    Execute \textbf{show ip nat translations} in the router login window or \textbf{sudo iptables -t nat -L -n -v} in linux router command line to display the translation table.
-    Save the output for the lab report.
+    Execute \textbf{show ip nat translations} in the router login window to display the translation table.
+    Save the output for the lab report.\\
     Exchange the data you saved with a student in the other subnet.
     \subsection*{Report}
     \begin{enumerate}
@@ -417,7 +419,7 @@
     Execute \textbf{tcpdump} on all the hosts. \\
     Generate traffic between the inside and outside hosts.
     Examine the \textbf{tcpdump} output to see how PAT works.\\
-    Start the Apache web server on \texttt{guchi}. Also, start the web browser \texttt{Mozilla} on an outside host (e.g., \texttt{shakti}), and enter the URL \texttt{http://128.238.61.1}. Save the \textbf{wireshark} output.\\
+    Start the Apache web server on \texttt{guchi}. Also, start the web browser \texttt{Mozilla} on an outside host (e.g., \texttt{shakti}), and enter the URL \texttt{http://128.238.61.1}. Save the \textbf{tcpdump} output.\\
     Use \textbf{show ip nat translations} to display and then save the translation table.
     Exchange the data you saved with a student in the other subnet.
     \subsection*{Report}
@@ -482,10 +484,12 @@
 \section{FTP Socket programming}
     This is an optional exercise on socket programming.
     Or, it can be assigned as a take-home project for extra credits.
-    Note that familiarity with C programming is required.
-    \subsection*{PROBLEM}
+    Note that familiarity with C (or C++) programming is required.
+
+    \subsection*{Problem}
     Examine the message exchanges of FTP. Write a FTP client program which takes a file name as input, and upload the file to a standard FTP server on a remote machine.
-    \subsection*{HINTS}
+
+    \subsection*{Hints}
     \begin{itemize}
         \item First you need to set up the control connection to Port 21 of the remote machine, using a TCP socket.
         \item When the control connection is established, you need to exchange FTP commands with the remote FTP server, as given in Table 5.1.
@@ -496,18 +500,5 @@
         \item Also your program needs to parse the server responses (some examples are given in Table 5.2) to find out the status of the previous FTP command.
         \item The FTP data connection should be established using the \textbf{PORT} command (see Chapter 5).
     \end{itemize}
-
-\appendix
-\section*{Appendices}
-\addcontentsline{toc}{section}{Appendices}
-\renewcommand{\thesubsection}{\Alph{subsection}}
-
-\subsection{DHCP Header}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.9\textwidth]{img/dhcp-header.png}
-    \caption{The DHCP message format}
-\end{figure}
-Reference: TCP/IP Essential
 
 \end{document}
